crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_annotated_dim_expression.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class AnnotatedDimExpression {
  void method(int n) {
    int[] values = new int[n];
  }
}

@interface Marker {
}

diagnostics:
(none)
