crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_annotated_intersection_cast_bounds.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
@interface NonNull {
}

interface FirstBound {
}

interface SecondBound {
}

class AnnotatedIntersectionCastBounds {
  Object cast(Object value) {
    return (FirstBound & @NonNull SecondBound) value;
  }
}

diagnostics:
(none)
