crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_annotated_record_components.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
record AnnotatedRecordComponents(@Marker int x, String @Marker ... labels) {
}

@interface Marker {
}

diagnostics:
(none)
