crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_annotated_type_parameter_modifier.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class AnnotatedTypeParameter<@Marker T> {
}

@interface Marker {
}

diagnostics:
(none)
