crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_annotation_forms_and_element_values.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
@Marker
@Single("value")
@Normal(name = "test", nested = @Marker, values = { 1, 2, 3 })
class Annotated {
}

diagnostics:
(none)
