crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_anonymous_class_instance_creation_body.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class AnonymousCreation {
  Runnable runnable =
    new Runnable() {
      public void run() {
      }
    };
}

diagnostics:
(none)
