crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_array_access_forms.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ArrayAccessForms {
  void method(int[] values) {
    int byName = values[0];
    int byPrimary = (values)[0];
    int byCreation = new int[] { 1 }[0];
  }
}

diagnostics:
(none)
