crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_array_initializers_and_array_creation_forms.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Arrays {
  void method(int n) {
    int[] literal = { 1, 2, 3 };
    int[][] sized = new int[n][n];
    String[] named = new String[] { "" };
  }
}

diagnostics:
(none)
