crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_assignment_left_hand_side_forms.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class AssignmentLeftHandSides {
  int field;

  void method(int[] values) {
    int local;
    local = 1;
    this.field = 2;
    values[0] = 3;
  }
}

diagnostics:
(none)
