crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_basic_for_with_conditional_initializer.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class BasicForConditionalInitializer {
  void method(boolean flag, int n) {
    int i;
    for (i = flag ? 1 : 2; i < n; i++) {
    }
  }
}

diagnostics:
(none)
