crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_block_local_declarations_and_statement_forms.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Statements {
  void method(Object o) {
    class LocalClass {
    }
    interface LocalInterface {
    }
    final var local = o;
    label:
    if (local == null) {
    }
    if (local instanceof String s) {
      s.trim();
    } else {
      local.toString();
    }
    assert local != null : local;
  }
}

diagnostics:
(none)
